--- a/GlucoMan.Maui/CorrectionParametersPage.xaml
+++ b/GlucoMan.Maui/CorrectionParametersPage.xaml
@@ -8,19 +8,19 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="35"/>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="28"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="60"/>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="35"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="60"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="60"/>
                 <RowDefinition Height="35"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="30"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -55,7 +55,7 @@
 
             <Label Grid.Row="7" Grid.ColumnSpan="4" Text="Calculation of insulin sensitivity" 
                    FontSize="Large"  HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontAttributes="Bold"/>
-            <Label Grid.Row="8" Grid.ColumnSpan="4" Text="Typical boluses made during a day [Ui]" 
+            <Label Grid.Row="8" Grid.ColumnSpan="4" Text="Typical boluses made during a day [U]" 
                    FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Label Grid.Row="9" Grid.Column="0" Text="morning" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
@@ -74,7 +74,7 @@
 
             <Label Grid.Row="11" Grid.Column="0" Text="TDD" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="11" Grid.Column="1" Text="Sens.factor" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="11" Grid.Column="2" Text="Sens.to insul." HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="11" Grid.Column="2" Text="Sens.to insul. " HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Label Grid.Row="12" Grid.Column="0" x:Name="txtTotalDailyDoseOfInsulin" Text="----" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
             <Picker Grid.Row="12" Grid.Column="1" x:Name="cmbSensitivityFactor" Title="pick value">
@@ -101,7 +101,6 @@
                 <Button Grid.Row="1" Margin="-5,-5,-5,-5" FontSize="Caption" x:Name="btnSaveInsulinSensitivity" Text="Save"
                     Padding="0,0,0,0" Clicked="btnSaveInsulinSensitivity_Click"/>
             </Grid>
-
 
             <Label Grid.Row="13" Grid.ColumnSpan="4" Text="Physical Activity parameters" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontSize="Large" FontAttributes="Bold"/>
