--- a/GlucoMan.Maui/FoodPage.xaml
+++ b/GlucoMan.Maui/FoodPage.xaml
@@ -4,30 +4,16 @@
              x:Class="GlucoMan.Maui.FoodPage"
              Title="Food details">
     <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
+        <Grid RowDefinitions="35,20,50,20,50,20,50,35,20,30,50,20,50,20,50,50,50"
+            ColumnDefinitions="*,*,*,*">
 
             <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
-                Grid.ColumnSpan="4" Text="Food's detailed nutrition data" 
-                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+                Grid.ColumnSpan="4" Text="Food's nutrition data [g in 100 g]" 
+                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"
+                   FontSize="Large"/>
 
             <Label Grid.Row="1" Grid.Column="0" Text="Calories [kCal]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="1" Text="Total fats [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="1" Text="Total fats %" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="1" Grid.Column="2" Text="Saturated fats" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="1" Grid.Column="3" Text="Mono sat. fats" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
@@ -40,10 +26,10 @@
             <Entry Grid.Row="2" Grid.Column="3" x:Name="txtMonoinsaturatedFats" BackgroundColor="White"
                 Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
 
-            <Label Grid.Row="3" Grid.Column="0" Text="Poli fats  [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="3" Grid.Column="1" Text="CHO [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="3" Grid.Column="2" Text="Sugar [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="3" Grid.Column="3" Text="Fibers [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="3" Grid.Column="0" Text="Poli fats  [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="3" Grid.Column="1" Text="CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="3" Grid.Column="2" Text="Sugar [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="3" Grid.Column="3" Text="Fibers [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="4" Grid.Column="0" x:Name="txtPolinsaturatedFats" BackgroundColor="White"
                 Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
@@ -54,12 +40,13 @@
             <Entry Grid.Row="4" Grid.Column="3" x:Name="txtFibers" BackgroundColor="White"
                 Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
 
-            <Label Grid.Row="5" Grid.Column="0" Text="Proteins [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="5" Grid.Column="1" Text="Salt [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="5" Grid.Column="2" Text="Cholesterol [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="5" Grid.Column="3" Text="Potassium  [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="5" Grid.Column="0" Text="Proteins [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="5" Grid.Column="1" Text="Salt [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="5" Grid.Column="2" Text="Cholesterol [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="5" Grid.Column="3" Text="Potassium  [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="6" Grid.Column="0" x:Name="txtProteins" BackgroundColor="White"
+                   
                 Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
             <Entry Grid.Row="6" Grid.Column="1" x:Name="txtSalt" BackgroundColor="White"
                 Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
@@ -68,9 +55,46 @@
             <Entry Grid.Row="6" Grid.Column="3" x:Name="txtPotassium" BackgroundColor="White"
                 Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
 
-            <Button Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" x:Name="btnChoose" Text="OK" 
-                    HorizontalOptions="Center" Clicked="btnOk_Click"></Button>
+            <Label Grid.Row="7" Grid.Column="0" Text="Food info" 
+                   Grid.ColumnSpan="4" FontSize="Large"
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
+            <Label Grid.Row="8" Grid.Column="0" Text="Make" HorizontalTextAlignment="Center" VerticalTextAlignment="End"
+                   Grid.ColumnSpan="4"/>
+            <Entry Grid.Row="9" Grid.Column="0" x:Name="txtFoodMake" BackgroundColor="White"
+                   Grid.ColumnSpan="4"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Picker Grid.Row="10" Grid.Column="0" x:Name="cmbMake" Title="Pick Maker of Food"
+                    Margin="5,0,5,0" Grid.ColumnSpan="4">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>1800</x:String>
+                        <x:String>1500</x:String>
+                        <x:String>1400</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
+            <Label Grid.Row="11" Grid.Column="0" Text="Product" HorizontalTextAlignment="Center" VerticalTextAlignment="End"
+                   Grid.ColumnSpan="4"/>
+            <Entry Grid.Row="12" Grid.Column="0" x:Name="txtFoodProduct" BackgroundColor="White"
+                   Grid.ColumnSpan="4"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>                  
+            <Label Grid.Row="13" Grid.Column="0" Text="Category" HorizontalTextAlignment="Center" VerticalTextAlignment="End"
+                   Grid.ColumnSpan="4"/>
+            <Entry Grid.Row="14" Grid.Column="0" x:Name="txtCategory" BackgroundColor="White"
+                   Grid.ColumnSpan="4"/>
+            <Picker Grid.Row="15" Grid.Column="0" x:Name="cmbCategory" Title="Pick category"
+                    Margin="5,0,5,0" Grid.ColumnSpan="4">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>1800</x:String>
+                        <x:String>1500</x:String>
+                        <x:String>1400</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
+            <Button Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="4" x:Name="btnChoose" Text="OK" 
+                    HorizontalOptions="Center" Clicked="btnOk_Click"></Button>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
