--- a/GlucoMan.Maui/FoodsPage.xaml
+++ b/GlucoMan.Maui/FoodsPage.xaml
@@ -8,12 +8,12 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
                 <RowDefinition Height="60"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="70"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -42,7 +42,7 @@
             <Button Grid.Row="2" Grid.Column="3" x:Name="btnChoose" Text="Choose" 
                     Clicked="btnChoose_Click"></Button>
 
-            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,0,10,0"
+            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="2,0,10,0"
                     Text="Description of food" HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" 
@@ -50,7 +50,7 @@
                     Keyboard="Text" TextChanged="txtDescription_TextChanged"
                     FontSize="Medium" HorizontalTextAlignment="Start"/>
 
-            <Label Grid.Row="5" Grid.Column="0" Text="CHO [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="5" Grid.Column="0" Text="CHO %" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="6" Grid.Column="0" x:Name="txtFoodCarbohydrates" BackgroundColor="GreenYellow"
                 Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
@@ -63,8 +63,8 @@
                     Clicked="btnSaveFood_Click"></Button>
             <Button Grid.Row="7" Grid.Column="1" Text="Details" x:Name="btnFoodDetails" 
                     Clicked="btnFoodDetails_Click"></Button>
-            <Button Grid.Row="7" Grid.Column="2" Text="Clean Fields" x:Name="btnCleanFields" 
-                    Clicked="btnCleanFields_Click"></Button>
+            <Button Grid.Row="7" Grid.Column="2" Text="Clean&#10;Fields" x:Name="btnCleanFields" 
+                    Clicked="btnCleanFields_Click" LineBreakMode="WordWrap"></Button>
             <Button Grid.Row="7" Grid.Column="3" Text="Search" x:Name="btnSearchFood" 
                     Clicked="btnSearchFood_Click"></Button>
 
