--- a/GlucoMan.Maui/MainPage.xaml
+++ b/GlucoMan.Maui/MainPage.xaml
@@ -19,8 +19,8 @@
                     Margin="15,4,15,4"></Button>
             <Button x:Name="btnFoods" Text="Foods" Clicked="btnFoods_Clicked" IsEnabled="True"
                     Margin="15,4,15,4"></Button>
-            <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked" IsEnabled="True"
-                    Margin="15,4,15,4"></Button>
+            <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked"
+                    Margin="15,4,15,4" IsEnabled="False"/>
             <Button x:Name="btnInsulinCalc" Text="Meal insulin" Clicked="btnInsulinCalc_Clicked"
                     Margin="15,4,15,4"></Button>
             <Button x:Name="btnInjections" Text="Injections" 
